# daric

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
financial_tracker/: app.py
financial_tracker/data/: category_keywords_template.json  sample_account_data.csv  sample_credit_card_data.csv
financial_tracker/extractors/: extractor_factory.py  google_drive_extractor.py  local_file_extractor.py
financial_tracker/transformations/: transform.py
financial_tracker/visualizations/: visualization.py
